feat: add redelegation info
